--- a/AIS Cinema/Views/Orders/Pay.cshtml
+++ b/AIS Cinema/Views/Orders/Pay.cshtml
@@ -1,4 +1,4 @@
-﻿@model AIS_Cinema.ViewModels.SeatSelection
+﻿@model AIS_Cinema.Models.Payment
 
 @{
     ViewData["Title"] = "Оплата";
@@ -7,20 +7,24 @@
 <h1 class="mt-5">Оплата билетов</h1>
 <form asp-action="Pay" method="post" class="mt-3">
     <div class="form-group">
-        <label for="cardNumber">Номер карты</label>
-        <input type="text" class="form-control" id="cardNumber" name="cardNumber" placeholder="Введите номер карты" required>
+        <label asp-for="CardNumber"></label>
+        <input asp-for="CardNumber" class="form-control" placeholder="Введите номер карты">
+        <span asp-validation-for="CardNumber" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label for="cardHolder">Владелец карты</label>
-        <input type="text" class="form-control" id="cardHolder" name="cardHolder" placeholder="Введите имя владельца карты" required>
+        <label asp-for="CardHolder"></label>
+        <input asp-for="CardHolder" class="form-control" placeholder="Введите имя владельца карты">
+        <span asp-validation-for="CardHolder" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label for="expiryDate">Срок действия</label>
-        <input type="text" class="form-control" id="expiryDate" name="expiryDate" placeholder="MM/YY" required>
+        <label asp-for="ExpiryDate"></label>
+        <input asp-for="ExpiryDate" class="form-control" placeholder="MM/YY">
+        <span asp-validation-for="ExpiryDate" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label for="cvv">CVV</label>
-        <input type="text" class="form-control" id="cvv" name="cvv" placeholder="Введите CVV" required>
+        <label asp-for="CVV"></label>
+        <input asp-for="CVV" class="form-control" placeholder="Введите CVV">
+        <span asp-validation-for="CVV" class="text-danger"></span>
     </div>
-    <input type="submit" class="btn btn-primary">Оплатить</input>
+    <input type="submit" class="btn btn-primary" value="Оплатить">
 </form>
