--- a/AIS Cinema/Views/Orders/Pay.cshtml
+++ b/AIS Cinema/Views/Orders/Pay.cshtml
@@ -4,6 +4,24 @@
     ViewData["Title"] = "Оплата";
 }
 
+<ul class="nav nav-tabs mb-3">
+    <li class="nav-item">
+        <span class="nav-link disabled">Выбор мест</span>
+    </li>
+    <li class="nav-item">
+        <span class="nav-link disabled">Ввод почты</span>
+    </li>
+    <li class="nav-item">
+        <span class="nav-link disabled">Проверка данных</span>
+    </li>
+    <li class="nav-item">
+        <span class="nav-link active">Оплата</span>
+    </li>
+    <li class="nav-item">
+        <span class="nav-link disabled">Подтверждение</span>
+    </li>
+</ul>
+
 <h1 class="mt-5">Оплата билетов</h1>
 <form asp-action="Pay" method="post" class="mt-3">
     <div class="form-group">
