--- a/AIS Cinema/Views/Orders/PaymentSuccess.cshtml
+++ b/AIS Cinema/Views/Orders/PaymentSuccess.cshtml
@@ -2,6 +2,24 @@
     ViewData["Title"] = "Оплата успешна!";
 }
 
+<ul class="nav nav-tabs mb-3">
+    <li class="nav-item">
+        <span class="nav-link disabled">Выбор мест</span>
+    </li>
+    <li class="nav-item">
+        <span class="nav-link disabled">Ввод почты</span>
+    </li>
+    <li class="nav-item">
+        <span class="nav-link disabled">Проверка данных</span>
+    </li>
+    <li class="nav-item">
+        <span class="nav-link disabled">Оплата</span>
+    </li>
+    <li class="nav-item">
+        <span class="nav-link active">Подтверждение</span>
+    </li>
+</ul>
+
 <div class="row justify-content-center">
     <div class="col-md-6">
         <div class="card mt-5">
