--- a/AIS Cinema/Views/Orders/ConfirmOrder.cshtml
+++ b/AIS Cinema/Views/Orders/ConfirmOrder.cshtml
@@ -5,13 +5,19 @@
 
 <ul class="nav nav-tabs mb-3">
     <li class="nav-item">
-        <span class="nav-link">Выбор мест</span>
+        <span class="nav-link disabled">Выбор мест</span>
     </li>
     <li class="nav-item">
-        <span class="nav-link">Отправка билетов</span>
+        <span class="nav-link disabled">Ввод почты</span>
     </li>
     <li class="nav-item">
-        <span class="nav-link active">Подтверждение покупки</span>
+        <span class="nav-link active">Проверка данных</span>
+    </li>
+    <li class="nav-item">
+        <span class="nav-link disabled">Оплата</span>
+    </li>
+    <li class="nav-item">
+        <span class="nav-link disabled">Подтверждение</span>
     </li>
 </ul>
 
