--- a/AIS Cinema/Views/Orders/EnterEmail.cshtml
+++ b/AIS Cinema/Views/Orders/EnterEmail.cshtml
@@ -7,13 +7,19 @@
 
 <ul class="nav nav-tabs mb-3">
     <li class="nav-item">
-        <span class="nav-link">Выбор мест</span>
+        <span class="nav-link disabled">Выбор мест</span>
     </li>
     <li class="nav-item">
-        <span class="nav-link active">Отправка билетов</span>
+        <span class="nav-link active">Ввод почты</span>
     </li>
     <li class="nav-item">
-        <span class="nav-link disabled">Подтверждение покупки</span>
+        <span class="nav-link disabled">Проверка данных</span>
+    </li>
+    <li class="nav-item">
+        <span class="nav-link disabled">Оплата</span>
+    </li>
+    <li class="nav-item">
+        <span class="nav-link disabled">Подтверждение</span>
     </li>
 </ul>
 
