--- a/AIS Cinema/Views/Shared/_Layout.cshtml
+++ b/AIS Cinema/Views/Shared/_Layout.cshtml
@@ -28,18 +28,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-danger" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Администрирование
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Movies" asp-action="Index">Фильмы</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Sessions" asp-action="Index">Сеансы</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Genres" asp-action="Index">Жанры</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Countries" asp-action="Index">Страны</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Halls" asp-action="Index">Залы</a></li>
-                            </ul>
-                        </li>
+                        @if (User.IsInRole("admin"))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-danger" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Администрирование
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Movies" asp-action="Index">Фильмы</a></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Sessions" asp-action="Index">Сеансы</a></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Genres" asp-action="Index">Жанры</a></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Countries" asp-action="Index">Страны</a></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Halls" asp-action="Index">Залы</a></li>
+                                </ul>
+                            </li>
+                        }
                     </ul>
                 </div>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
