--- a/AIS Cinema/Areas/Admin/Views/Halls/Create.cshtml
+++ b/AIS Cinema/Areas/Admin/Views/Halls/Create.cshtml
@@ -18,7 +18,7 @@
                 <textarea asp-for="Schema" class="form-control"></textarea>
                 <span asp-validation-for="Schema" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
