--- a/AIS Cinema/Areas/Admin/Views/Movies/Index.cshtml
+++ b/AIS Cinema/Areas/Admin/Views/Movies/Index.cshtml
@@ -35,34 +35,42 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Duration)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductionYear)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReleaseDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PosterPath)
-            </td>
-            <td>
-                <a asp-area="Admin" asp-controller="Movies" asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
-                <a asp-area="Admin" asp-controller="Movies" asp-action="Details" asp-route-id="@item.Id">Подробнее</a> |
-                <a asp-area="Admin" asp-controller="Movies" asp-action="BindGenres" asp-route-id="@item.Id">Жанры</a> |
-                <a asp-area="Admin" asp-controller="Movies" asp-action="BindCountries" asp-route-id="@item.Id">Страны</a> |
-                <a asp-area="Admin" asp-controller="Movies" asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Duration)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProductionYear)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ReleaseDate)
+                </td>
+                <td>
+                    @{
+                        var description = item.Description;
+                        if (description.Length > 100) // Здесь 100 - количество символов, до которых нужно обрезать
+                        {
+                            description = description.Substring(0, 100) + "...";
+                        }
+                    }
+                    @description
+                </td>
+                <td>
+                    <img src="@("~/" + item.PosterPath)" alt="@item.Name" style="max-width: 100px;" />
+                </td>
+                <td>
+                    <a asp-area="Admin" asp-controller="Movies" asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
+                    <a asp-area="Admin" asp-controller="Movies" asp-action="Details" asp-route-id="@item.Id">Подробнее</a> |
+                    <a asp-area="Admin" asp-controller="Movies" asp-action="BindGenres" asp-route-id="@item.Id">Жанры</a> |
+                    <a asp-area="Admin" asp-controller="Movies" asp-action="BindCountries" asp-route-id="@item.Id">Страны</a> |
+                    <a asp-area="Admin" asp-controller="Movies" asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
