--- a/AIS Cinema/Areas/Admin/Views/AgeLimits/Create.cshtml
+++ b/AIS Cinema/Areas/Admin/Views/AgeLimits/Create.cshtml
@@ -1,13 +1,13 @@
 ﻿@model AIS_Cinema.Models.AgeLimit
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Создать";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Создать</h1>
 
-<h4>AgeLimit</h4>
+<h4>Возрастное ограничение</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,17 +18,19 @@
                 <input asp-for="Value" class="form-control" />
                 <span asp-validation-for="Value" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-2">
+                <input type="submit" value="Создать" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад к списку</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
