--- a/AIS Cinema/Areas/Admin/Views/AgeLimits/Index.cshtml
+++ b/AIS Cinema/Areas/Admin/Views/AgeLimits/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IEnumerable<AIS_Cinema.Models.AgeLimit>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Возрастные ограничения";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Возрастные ограничения</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Добавить</a>
 </p>
 <table class="table">
     <thead>
@@ -26,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.Value)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Редактировать</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Подробнее</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
             </td>
         </tr>
 }
