--- a/AIS Cinema/Areas/Admin/Views/Tickets/Create.cshtml
+++ b/AIS Cinema/Areas/Admin/Views/Tickets/Create.cshtml
@@ -1,13 +1,13 @@
 ﻿@model AIS_Cinema.Models.Ticket
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Создать";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Создать</h1>
 
-<h4>Ticket</h4>
+<h4>Билет</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,7 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="SessionId" class="control-label"></label>
-                <select asp-for="SessionId" class ="form-control" asp-items="ViewBag.SessionId"></select>
+                <select asp-for="SessionId" class="form-control" asp-items="ViewBag.SessionId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="RowNumber" class="control-label"></label>
@@ -37,17 +37,19 @@
                 <input asp-for="OwnerEmail" class="form-control" />
                 <span asp-validation-for="OwnerEmail" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-2">
+                <input type="submit" value="Создать" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад к списку</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
