--- a/AIS Cinema/Areas/Admin/Views/Tickets/Edit.cshtml
+++ b/AIS Cinema/Areas/Admin/Views/Tickets/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model AIS_Cinema.Models.Ticket
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Редактировать";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Редактировать</h1>
 
-<h4>Ticket</h4>
+<h4>Билет</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -39,17 +39,19 @@
                 <input asp-for="OwnerEmail" class="form-control" />
                 <span asp-validation-for="OwnerEmail" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group mt-2">
+                <input type="submit" value="Сохранить" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад к списку</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
