--- a/AIS Cinema/Views/Home/Privacy.cshtml
+++ b/AIS Cinema/Views/Home/Privacy.cshtml
@@ -1,6 +1,62 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Политика конфиденциальности";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h2>@ViewData["Title"]</h2>
+
+<div class="privacy-policy">
+    <p>
+        <strong>1. Общие положения</strong>
+    </p>
+    <p>
+        Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального закона от 27.07.2006. №152-ФЗ «О персональных данных» и определяет порядок обработки персональных данных и меры по обеспечению безопасности персональных данных [Название компании] (далее – Оператор).
+    </p>
+    <p>
+        <strong>2. Основные понятия, используемые в Политике</strong>
+    </p>
+    <p>
+        Автоматизированная обработка персональных данных – обработка персональных данных с помощью средств вычислительной техники;
+    </p>
+    <p>
+        Блокирование персональных данных – временное прекращение обработки персональных данных (за исключением случаев, если обработка необходима для уточнения персональных данных);
+    </p>
+    <p>
+        <strong>3. Оператор может обрабатывать следующие персональные данные Пользователя</strong>
+    </p>
+    <p>
+        Фамилия, имя, отчество;
+    </p>
+    <p>
+        Электронный адрес;
+    </p>
+    <p>
+        Номера телефонов;
+    </p>
+    <p>
+        <strong>4. Цели обработки персональных данных</strong>
+    </p>
+    <p>
+        Цель обработки персональных данных Пользователя — информирование Пользователя посредством отправки электронных писем.
+    </p>
+    <p>
+        <strong>5. Правовые основания обработки персональных данных</strong>
+    </p>
+    <p>
+        Оператор обрабатывает персональные данные Пользователя только в случае их заполнения и/или отправки Пользователем самостоятельно через специальные формы, расположенные на сайте [Название компании]. Заполняя соответствующие формы и/или отправляя свои персональные данные Оператору, Пользователь выражает свое согласие с данной Политикой.
+    </p>
+    <p>
+        <strong>6. Порядок сбора, хранения, передачи и других видов обработки персональных данных</strong>
+    </p>
+    <p>
+        Безопасность персональных данных, которые обрабатываются Оператором, обеспечивается путем реализации правовых, организационных и технических мер, необходимых для выполнения в полном объеме требований действующего законодательства в области защиты персональных данных.
+    </p>
+    <p>
+        <strong>7. Заключительные положения</strong>
+    </p>
+    <p>
+        Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его персональных данных, обратившись к Оператору с помощью электронной почты [email@example.com].
+    </p>
+    <p>
+        В данном документе будут отражены любые изменения политики обработки персональных данных Оператором. Политика действует бессрочно до замены её новой версией.
+    </p>
+</div>
