--- a/AIS Cinema/Views/Orders/Pay.cshtml
+++ b/AIS Cinema/Views/Orders/Pay.cshtml
@@ -26,7 +26,7 @@
 <form asp-action="Pay" method="post" class="mt-3">
     <div class="form-group">
         <label asp-for="CardNumber"></label>
-        <input asp-for="CardNumber" class="form-control" placeholder="Введите номер карты">
+        <input asp-for="CardNumber" class="form-control" placeholder="Введите номер карты" id="cardNumber">
         <span asp-validation-for="CardNumber" class="text-danger"></span>
     </div>
     <div class="form-group">
@@ -36,13 +36,26 @@
     </div>
     <div class="form-group">
         <label asp-for="ExpiryDate"></label>
-        <input asp-for="ExpiryDate" class="form-control" placeholder="MM/YY">
+        <input asp-for="ExpiryDate" class="form-control" placeholder="MM/YY" id="expiryDate">
         <span asp-validation-for="ExpiryDate" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="CVV"></label>
-        <input asp-for="CVV" class="form-control" placeholder="Введите CVV">
+        <input asp-for="CVV" class="form-control" placeholder="Введите CVV" id="cvv">
         <span asp-validation-for="CVV" class="text-danger"></span>
     </div>
     <input type="submit" class="btn btn-primary" value="Оплатить">
 </form>
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            Inputmask("9999 9999 9999 9999").mask("#cardNumber");
+            Inputmask("99/99").mask("#expiryDate");
+            Inputmask("999").mask("#cvv");
+        });
+    </script>
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
