--- a/AIS Cinema/Views/Shared/_Layout.cshtml
+++ b/AIS Cinema/Views/Shared/_Layout.cshtml
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="~/AIS_Cinema.styles.css" asp-append-version="true" />
 </head>
 <body>
+    @{
+        ViewData["CompanyName"] = "АИС Кинотеатра";
+    }
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AIS_Cinema</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@ViewData["CompanyName"]</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,7 +29,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Sessions" asp-action="Index">Сеансы</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">О нас</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Политика конфиденциальности</a>
                         </li>
                         @if (User.IsInRole("admin"))
                         {
@@ -40,6 +46,7 @@
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Genres" asp-action="Index">Жанры</a></li>
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Countries" asp-action="Index">Страны</a></li>
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Halls" asp-action="Index">Залы</a></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="AgeLimits" asp-action="Index">Возрастные ограничения</a></li>
                                 </ul>
                             </li>
                         }
@@ -59,7 +66,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - AIS_Cinema - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - @ViewData["CompanyName"] - <a asp-area="" asp-controller="Home" asp-action="Privacy">Политика конфиденциальности</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
