Some bot changes

--- a/AIS Cinema/Views/TelegramBinding/Success.cshtml
+++ b/AIS Cinema/Views/TelegramBinding/Success.cshtml
@@ -4,7 +4,7 @@
     <hr>
     <p class="mb-0">Вы можете закрыть эту страницу.</p>
     <div class="text-center mt-3">
-        <a asp-controller="Movies" asp-action="Index" class="btn btn-primary">Афише</a>
+        <a asp-controller="Movies" asp-action="Index" class="btn btn-primary">Афиша</a>
         <a asp-controller="Sessions" asp-action="Index" class="btn btn-primary">Сеансы</a>
     </div>
 </div>
