--- a/AIS Cinema/Areas/Admin/Views/Movies/Index.cshtml
+++ b/AIS Cinema/Areas/Admin/Views/Movies/Index.cshtml
@@ -64,11 +64,12 @@
                     <img src="@("~/" + item.PosterPath)" alt="@item.Name" style="max-width: 100px;" />
                 </td>
                 <td>
+                    <a asp-area="Admin" asp-controller="Sessions" asp-action="Index" asp-route-movieId="@item.Id">Сеансы</a> |
                     <a asp-area="Admin" asp-controller="Movies" asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
                     <a asp-area="Admin" asp-controller="Movies" asp-action="Details" asp-route-id="@item.Id">Подробнее</a> |
                     <a asp-area="Admin" asp-controller="Movies" asp-action="BindGenres" asp-route-id="@item.Id">Жанры</a> |
-                    <a asp-area="Admin" asp-controller="Movies" asp-action="BindCountries" asp-route-id="@item.Id">Страны</a> |
-                    <a asp-area="Admin" asp-controller="Movies" asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
+                    <a asp-area="Admin" asp-controller="Movies" asp-action="BindCountries" asp-route-id="@item.Id">Страны</a>
+                    @* <a asp-area="Admin" asp-controller="Movies" asp-action="Delete" asp-route-id="@item.Id">Удалить</a> *@
                 </td>
             </tr>
         }
