--- a/AIS Cinema/Areas/Admin/Views/Tickets/Details.cshtml
+++ b/AIS Cinema/Areas/Admin/Views/Tickets/Details.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Session)
+            @Html.DisplayNameFor(model => model.SessionId)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Session.Id)
