--- a/AIS Cinema/Areas/Admin/Views/Tickets/Index.cshtml
+++ b/AIS Cinema/Areas/Admin/Views/Tickets/Index.cshtml
@@ -14,7 +14,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Session)
+                @Html.DisplayNameFor(model => model.SessionId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.RowNumber)
@@ -49,7 +49,7 @@
                 @Html.DisplayFor(modelItem => item.OwnerEmail)
             </td>
             <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Редактировать</a> |
+                    @* <a asp-action="Edit" asp-route-id="@item.Id">Редактировать</a> | *@
                     <a asp-action="Details" asp-route-id="@item.Id">Подробнее</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
             </td>
