--- a/AIS Cinema/Views/Movies/Index.cshtml
+++ b/AIS Cinema/Views/Movies/Index.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Афиша";
 }
 
+<h2 class="mb-3">Афиша</h2>
+
 <div class="row row-cols-1 row-cols-md-4 g-4">
     @foreach (var card in Model)
     {
