--- a/AIS Cinema/Views/Shared/_Layout.cshtml
+++ b/AIS Cinema/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Movies" asp-action="Index">Фильмы</a></li>
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Sessions" asp-action="Index">Сеансы</a></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Tickets" asp-action="Index">Билеты</a></li>
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Genres" asp-action="Index">Жанры</a></li>
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Countries" asp-action="Index">Страны</a></li>
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Halls" asp-action="Index">Залы</a></li>
