--- a/AIS Cinema/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/AIS Cinema/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,8 +1,7 @@
 ﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/inputmask/5.0.7-beta.0/inputmask.min.js"></script>
+<script src="js/jquery.maskedinput.min.js"></script>
 
 <script>
     // Настройка клиентской валидации для поддержки запятых
